--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
     <relativePath>../parent/pom.xml</relativePath>
   </parent>
 
-  <groupId>com.semanticcms</groupId><artifactId>semanticcms-theme-documentation</artifactId><version>1.12.2-SNAPSHOT</version>
+  <groupId>com.semanticcms</groupId><artifactId>semanticcms-theme-documentation</artifactId><version>1.12.2</version>
   <packaging>bundle</packaging>
 
   <properties>
@@ -83,7 +83,7 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
     <connection>scm:git:git://github.com/ao-apps/semanticcms-theme-documentation.git</connection>
     <developerConnection>scm:git:git@github.com:ao-apps/semanticcms-theme-documentation.git</developerConnection>
     <url>https://github.com/ao-apps/semanticcms-theme-documentation</url>
-    <tag>HEAD</tag>
+    <tag>semanticcms-theme-documentation-1.12.2</tag>
   </scm>
 
   <issueManagement>
