--- a/book/pom.xml
+++ b/book/pom.xml
@@ -29,7 +29,7 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
     <relativePath>../../parent/pom.xml</relativePath>
   </parent>
 
-  <groupId>com.semanticcms</groupId><artifactId>semanticcms-theme-documentation-book</artifactId><version>1.12.2</version>
+  <groupId>com.semanticcms</groupId><artifactId>semanticcms-theme-documentation-book</artifactId><version>1.12.2-POST-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <properties>
@@ -76,7 +76,7 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
     <connection>scm:git:git://github.com/ao-apps/semanticcms-theme-documentation.git</connection>
     <developerConnection>scm:git:git@github.com:ao-apps/semanticcms-theme-documentation.git</developerConnection>
     <url>https://github.com/ao-apps/semanticcms-theme-documentation</url>
-    <tag>semanticcms-theme-documentation-book-1.12.2</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <issueManagement>
