--- a/book/pom.xml
+++ b/book/pom.xml
@@ -36,15 +36,15 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
     <module.name>com.semanticcms.theme.documentation.book</module.name>
     <!-- These values are copied from the project being documented -->
     <documented.artifactId>semanticcms-theme-documentation</documented.artifactId>
-    <documented.name>SemanticCMS Theme Documentation²</documented.name>
+    <documented.name>SemanticCMS Theme Documentation</documented.name>
     <documented.description>SemanticCMS theme tailored for technical documentation.</documented.description>
 
     <description.html><![CDATA[Documentation for <a target="${javadoc.target}" href="${project.url}">${documented.name}</a> in <a target="${javadoc.target}" href="https://semanticcms.com/">SemanticCMS</a> format.]]></description.html>
   </properties>
 
-  <name>SemanticCMS Theme Documentation² Book</name>
+  <name>SemanticCMS Theme Documentation Book</name>
   <url>https://semanticcms.com/theme-documentation/</url>
-  <description>Documentation for SemanticCMS Theme Documentation² in SemanticCMS format.</description>
+  <description>Documentation for SemanticCMS Theme Documentation in SemanticCMS format.</description>
   <inceptionYear>2013</inceptionYear>
 
   <licenses>
