--- a/book/pom.xml
+++ b/book/pom.xml
@@ -25,7 +25,7 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.semanticcms</groupId><artifactId>semanticcms-parent</artifactId><version>1.18.0-POST-SNAPSHOT</version>
+    <groupId>com.semanticcms</groupId><artifactId>semanticcms-parent</artifactId><version>1.19.0-SNAPSHOT</version>
     <relativePath>../../parent/pom.xml</relativePath>
   </parent>
 
@@ -33,7 +33,6 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
   <packaging>bundle</packaging>
 
   <properties>
-    <project.build.outputTimestamp>2023-03-13T21:23:58Z</project.build.outputTimestamp>
     <module.name>com.semanticcms.theme.documentation.book</module.name>
     <!-- These values are copied from the project being documented -->
     <documented.artifactId>semanticcms-theme-documentation</documented.artifactId>
