--- a/book/pom.xml
+++ b/book/pom.xml
@@ -30,7 +30,7 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
   </parent>
 
   <groupId>com.semanticcms</groupId><artifactId>semanticcms-theme-documentation-book</artifactId><version>1.12.3-POST-SNAPSHOT</version>
-  <packaging>bundle</packaging>
+  <packaging>jar</packaging>
 
   <properties>
     <module.name>com.semanticcms.theme.documentation.book</module.name>
@@ -153,6 +153,14 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
                 <Automatic-Module-Name>${module.name}</Automatic-Module-Name>
                 <Private-Package>!.</Private-Package>
               </instructions>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId><artifactId>maven-jar-plugin</artifactId>
+            <configuration>
+              <excludes>
+                <exclude>**/module-info.class</exclude>
+              </excludes>
             </configuration>
           </plugin>
         </plugins>
