--- a/book/pom.xml
+++ b/book/pom.xml
@@ -36,6 +36,7 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
     <!-- Must be set to ${git.commit.time} for snapshots or ISO 8601 timestamp for releases. -->
     <project.build.outputTimestamp>${git.commit.time}</project.build.outputTimestamp>
     <module.name>com.semanticcms.theme.documentation.book</module.name>
+    <subproject.subpath>devel/</subproject.subpath>
     <!-- These values are copied from the project being documented -->
     <documented.artifactId>semanticcms-theme-documentation</documented.artifactId>
     <documented.name>SemanticCMS Theme Documentation</documented.name>
